src/test/ui/feature-gate-allow-internal-unstable-nested-macro.stderr
error[E0658]: allow_internal_unstable side-steps feature gating and stability checks
  --> $DIR/feature-gate-allow-internal-unstable-nested-macro.rs:18:9
   |
18 |         #[allow_internal_unstable] //~ ERROR allow_internal_unstable side-steps
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
25 | bar!();
   | ------- in this macro invocation
   |
   = help: add #![feature(allow_internal_unstable)] to the crate attributes to enable

error: aborting due to previous error

